Added ShaderEffect class.

--- a/Wpf.ShaderEffectsDemo/App.xaml
+++ b/Wpf.ShaderEffectsDemo/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:DotNetDemoBin.Wpf.ShaderEffectsDemo"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ResourceDictionaries/PixelShaderResourceDictionary.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
