--- a/Wpf.ShaderEffectsDemo/App.xaml
+++ b/Wpf.ShaderEffectsDemo/App.xaml
@@ -2,12 +2,16 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:DotNetDemoBin.Wpf.ShaderEffectsDemo"
+             xmlns:effects="clr-namespace:DotNetDemoBin.Wpf.ShaderEffectsDemo.Effects"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="ResourceDictionaries/PixelShaderResourceDictionary.xaml" />
+                <ResourceDictionary Source="ResourceDictionaries/ImageResourceDictionary.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <effects:GrayscaleShaderEffect x:Key="GrayscaleEffect" />
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
