--- a/Wpf.ShaderEffectsDemo/ResourceDictionaries/ImageResourceDictionary.xaml
+++ b/Wpf.ShaderEffectsDemo/ResourceDictionaries/ImageResourceDictionary.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:DotNetDemoBin.Wpf.ShaderEffectsDemo.ResourceDictionaries">
-
-    <PixelShader x:Key="GrayscalePixelShader" UriSource="pack://application:,,,/Resources/ShaderEffects/Grayscale.fxc" />
-
+    
+    <BitmapImage x:Key="InputBitmapImage" UriSource="pack://application:,,,/Resources/Images/pexels-photo-462118.jpeg" />
+    
 </ResourceDictionary>
